--- a/Quiz.css
+++ b/Quiz.css
@@ -2,15 +2,23 @@
   html {
     font-size: 12px;
   }
-  button {
-    width: 10rem;
-    height: 5rem;
+  .answer {
+    width: 12rem;
+    height: 6rem;
   }
 }
-@media only screen and (min-width: 576px) {
-  button {
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .answer {
+    width: 14rem;
+    height: 7rem;
+    font-size: 1.25rem;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .answer {
     width: 20rem;
     height: 10rem;
+    font-size: 1.5rem;
   }
 }
 html, button {
@@ -20,60 +28,69 @@ body {
   text-align: center;
   background-color: #009999;
 }
-p, button {
+h2 {
+  height: 3rem;
+}
+ol {
+  border: 1px solid #121212;
+  background-color: tan;
+}
+li {
+  font-size: 1.5rem;
+  text-align: left;
+  margin: 1rem 0;
+}
+p {
   font-size: 1.5rem;
 }
-button {
+.question {
+  display: block;
+}
+.answer {
   background-color: #CC7700;
   color: #F0F0F0;
   border: 1px solid #121212;
   margin: 1rem;
-  box-shadow: -5px 2.5px 1px #121212;
-}
-button:hover {
-  box-shadow: -10px 5px 1px #121212;
-  transform: translate(5px, -2.5px);
+  box-shadow: -5px 2.5px 5px #121212;
   cursor: pointer;
 }
-.question {
-  display: inline-block;
+.answer:hover {
+  box-shadow: -10px 5px 10px #121212;
+  transform: translate(5px, -2.5px);
 }
-.q-two, .q-three, .q-four, .q-five {
+.q-two, .q-three, .q-four, .q-five, #results {
   display: none;
 }
 #change-display {
   display: block;
 }
-#back-button, #next-button {
-  width: auto;
-  height: 3rem;
-  box-shadow: none;
-  transform: none;
+#left-arrow, #right-arrow {
   display: inline;
+  cursor: pointer;
 }
+#left-arrow:hover {
+  transform: translateX(-5px);
+}
+#right-arrow:hover {
+  transform: translateX(5px);
+} 
 #current-question {
-  display: inline;
+  display: inline-block;
+  position: relative;
+  bottom: 1rem;
+  width: 10rem;
 }
-.animate-fade-in {
-  animation: fade-in 1s linear;
-  animation-fill-mode: forwards;
-}
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+#back-button, #next-button {
+  border: none;
+  background-color: #009999;
+  height: auto;
+  width: auto;
 }
 .animate-sink-in {
   animation: sink-in 1s linear;
   animation-fill-mode: forwards;
 }
 @keyframes sink-in {
-  from {
-    background-color: #CC7700;
-  }
   to {
     color: #CC7700;
     transform: translate(-5px, 2.5px);
@@ -90,7 +107,37 @@ button:hover {
     transform: translate(-5px, 2.5px);
     box-shadow: none;
   }
+}
+.animate-body-color {
+  animation: body-color 1s linear;
+  animation-fill-mode: forwards;
+}
+@keyframes body-color {
   to {
-    color: #F0F0F0;
+    background-color: #CC7700;
+  }
+}
+.animate-finish-quiz {
+  animation: finish-quiz 2s linear;
+  animation-fill-mode: forwards;
+}
+@keyframes finish-quiz {
+  to {
+    border: none;
+    color: #CC7700;
+    box-shadow: none;
+    transform: translate(-5px, 2.5px);
+  }
+}
+.animate-fade-in {
+  animation: fade-in 1s linear;
+  animation-fill-mode: forwards;
+}
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
