--- a/Quiz.css
+++ b/Quiz.css
@@ -88,7 +88,7 @@ p {
 }
 .animate-sink-in {
   animation: sink-in 1s linear;
-  animation-fill-mode: forwards;
+  animation-fill-mode: none;
 }
 @keyframes sink-in {
   to {
@@ -99,7 +99,7 @@ p {
 }
 .animate-emerge {
   animation: emerge 1s linear;
-  animation-fill-mode: forwards;
+  animation-fill-mode: none;
 }
 @keyframes emerge {
   from {
@@ -119,7 +119,7 @@ p {
 }
 .animate-finish-quiz {
   animation: finish-quiz 2s linear;
-  animation-fill-mode: forwards;
+  animation-fill-mode: none;
 }
 @keyframes finish-quiz {
   to {
@@ -131,7 +131,7 @@ p {
 }
 .animate-fade-in {
   animation: fade-in 1s linear;
-  animation-fill-mode: forwards;
+  animation-fill-mode: none;
 }
 @keyframes fade-in {
   from {
